--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,9 +32,9 @@ spring:
   freemarker:
     cache: false
     charset: utf-8
-    suffix: .ftl
+    suffix: .html
 web:
-  anon-url: /actuator/**,/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf,/*.*
+  anon-url: /actuator/**,/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf,/form/login,/login.html,/login,/css/**,/js/**
 #此配置开启mybatis sql打印
 logging:
   level:
